--- a/Indel.html
+++ b/Indel.html
@@ -10,5 +10,7 @@
 <body>
     <div class="headler"> </div>
     <div class="main"> </div>
+        <div class="block-1"></div>
+        <div class="block-2"></div>
     <div class="footer"> </div>
 </body>
