--- a/Indel.html
+++ b/Indel.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     <div class="headler"> </div>
+        <h1>Header</h1>
+    </div>
     <div class="main"> </div>
         <div class="block-1"></div>
         <div class="block-2"></div>
+    </div>
     <div class="footer"> </div>
+        <h1>Footer</h1>
+    </div>
 </body>
